--- a/scss/dark-variables.scss
+++ b/scss/dark-variables.scss
@@ -120,13 +120,13 @@ $input-group-addon-color:               $input-color;
 $input-group-addon-bg:                  $gray-800;
 $input-group-addon-border-color:        $input-border-color;
 
-$custom-select-color:               $input-color;
-$custom-select-disabled-color:      $gray-400;
-$custom-select-bg:                  $input-bg;
-$custom-select-disabled-bg:         $gray-800;
-$custom-select-indicator-color:     $gray-200;
-$custom-select-box-shadow:          inset 0 1px 2px rgba($white, .075);
-$custom-select-border-color:        $input-border-color;
+$form-select-color:               $input-color;
+$form-select-disabled-color:      $gray-400;
+$form-select-bg:                  $input-bg;
+$form-select-disabled-bg:         $gray-800;
+$form-select-indicator-color:     $gray-200;
+$form-select-box-shadow:          inset 0 1px 2px rgba($white, .075);
+$form-select-border-color:        $input-border-color;
 
 $form-range-track-bg:               $gray-600;
 $form-check-input-bg:               $input-bg;
